<resources>
    <string name="app_name">eMerchant</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Menu -->
    <string name="menu_home">Home</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_search">Search</string>
    <string name="menu_likes">Likes</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Log Out</string>

    <!-- Search Fragment -->
    <string name="searchbox">Search Products…</string>

    <!-- Order Fragment -->
    <string name="orderNo">Order Number:</string>
    <string name="total">Total</string>
    <string name="no_order">You don\'t have an order yet</string>

    <!-- OrderProduct View -->
    <string name="qty">Qty</string>
    <string name="price">Price</string>

    <!-- Detail Activity -->
    <string name="add_to_cart">Add To Cart</string>
    <string name="info">Informations</string>
    <string name="brand">Brand</string>
    <string name="warranty">Warranty</string>
    <string name="shipping">Shipping</string>
    <string name="availibility">Availibility</string>
    <string name="return_policy">Return Policy</string>
    <string name="weight">Weight (lbs)</string>
    <string name="width">Width (inch)</string>
    <string name="height">Height (inch)</string>
    <string name="depth">Depth (inch)</string>
    <string name="show_reviews">Show Reviews</string>

    <!-- Profile Fragment -->
    <string name="personel_info">PERSONEL INFO</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="birth_date">Birth Date</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="email">E-Mail</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="update">Touch to Update</string>
    <string name="updateProfileTitle">Update Profile</string>

    <!-- Cart Fragment -->
    <string name="approva_cart">Approve Cart</string>

</resources>